--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "private": true,
-  "devDependencies": {
-    "http-server": ">=0.8"
+  "dependencies": {
+    "babel-core": "^5.5.4",
+    "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.5.4",
+    "css-loader": "^0.14.4",
+    "cssnext-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^0.8.1",
+    "html-webpack-plugin": "^1.4.0",
+    "http-server": "^0.8.0",
+    "json-loader": "^0.5.2",
+    "moment": "^2.10.3",
+    "react": "^0.13.3",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
   },
   "scripts": {
-    "start": "npm run serve | npm run dev",
-    "serve": "./node_modules/.bin/http-server -p 8000",
-    "dev": "webpack-dev-server --progress --colors --port 8080"
-  },
-  "dependencies": {
-    "css-loader": "^0.14.4",
-    "json-loader": "^0.5.2",
-    "normalize.css": "^3.0.3",
-    "randomcolor": "^0.2.0",
-    "style-loader": "^0.12.3"
+    "start": "npm run build; http-server ./build -p 8080",
+    "build": "webpack --progress --optimize-minimize --optimize-dedupe",
+    "dev": "webpack-dev-server --hot --inline --progress --port 8080 --devtool source-map"
   }
 }
