--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "name": "vg15",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "babel-core": "^5.5.4",
     "babel-loader": "^5.1.4",
     "babel-runtime": "^5.5.4",
+    "classnames": "^2.1.2",
     "css-loader": "^0.14.4",
     "cssnext-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^0.8.1",
@@ -19,6 +22,6 @@
   "scripts": {
     "start": "npm run build; http-server ./build -p 8080",
     "build": "webpack --progress --optimize-minimize --optimize-dedupe",
-    "dev": "webpack-dev-server --hot --inline --progress --port 8080 --devtool source-map"
+    "dev": "webpack-dev-server --hot --inline --progress --port 8080 --devtool source-map  --history-api-fallback"
   }
 }
