--- a/package.json
+++ b/package.json
@@ -2,26 +2,27 @@
   "name": "vg15",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "babel-core": "^5.5.4",
-    "babel-loader": "^5.1.4",
-    "babel-runtime": "^5.5.4",
+  "scripts": {
+    "start": "http-server ./build -p 8080",
+    "build": "webpack --progress --optimize-minimize --optimize-dedupe",
+    "dev": "webpack-dev-server --hot --inline --devtool eval-source-map"
+  },
+  "devDependencies": {
+    "babel-core": "^5.6.15",
+    "babel-loader": "^5.2.2",
     "classnames": "^2.1.2",
-    "css-loader": "^0.14.4",
+    "css-loader": "^0.15.1",
     "cssnext-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^0.8.1",
-    "html-webpack-plugin": "^1.4.0",
-    "http-server": "^0.8.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "html-webpack-plugin": "^1.5.2",
     "json-loader": "^0.5.2",
     "moment": "^2.10.3",
     "react": "^0.13.3",
     "style-loader": "^0.12.3",
-    "webpack": "^1.9.10",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1"
   },
-  "scripts": {
-    "start": "npm run build; http-server ./build -p 8080",
-    "build": "webpack --progress --optimize-minimize --optimize-dedupe",
-    "dev": "webpack-dev-server --hot --inline --progress --port 8080 --devtool source-map  --history-api-fallback"
+  "dependencies": {
+    "http-server": "^0.8.0"
   }
 }
