--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "http-server ./build -p 8080",
-    "build": "webpack --progress --optimize-minimize --optimize-dedupe",
-    "dev": "webpack-dev-server --hot --inline --devtool eval-source-map"
+    "start": "webpack-dev-server --progress --hot --inline --devtool eval-source-map --port 3000 --history-api-fallback"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
@@ -21,8 +19,5 @@
     "style-loader": "^0.12.3",
     "webpack": "^1.10.0",
     "webpack-dev-server": "^1.10.1"
-  },
-  "dependencies": {
-    "http-server": "^0.8.0"
   }
 }
