--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --progress --hot --inline --devtool eval-source-map --port 3000 --history-api-fallback"
+    "start": "webpack-dev-server --progress --hot --inline --devtool eval-source-map --port 3000 --history-api-fallback",
+    "build": "webpack --progress --optimize-minimize --optimize-dedupe"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
